# schedule-your-lessons-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.test.yml  docker-compose.yml  logging_config.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_replace_scheduled_events_with_notification_logs.py
locales/en/: messages.ftl
locales/uk/: messages.ftl
middlewares/: logging.py
src/bot/: commands.py
src/bot/filters/: role_filter.py
src/bot/handlers/: admin_schedules.py  admin_users.py  schedule_view.py  settings.py  start.py
src/bot/keyboards/: admin_keyboards.py  calendar_keyboard.py  common_keyboards.py  schedule_keyboards.py
src/bot/middlewares/: db_session.py  user_context.py
src/bot/states/: schedule_states.py
src/domain/: enums.py
src/models/: __init__.py  notification_log.py  role.py  schedule.py  schedule_assignment.py  scheduled_event.py  user.py
src/notifications/: scheduler.py  sender.py
src/queue/: event_processor.py  event_scheduler.py  i18n_helper.py  redis_event_queue.py
src/repositories/: notification_log_repository.py  role_repository.py  schedule_assignment_repository.py  schedule_repository.py  scheduled_event_repository.py  user_repository.py
src/services/: notification_service.py  schedule_service.py  user_service.py
