[project]
name = "schedule-your-lessons"
version = "0.1.0"
description = "Telegram bot for scheduling lessons"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0,<4.0.0",
    "aiogram-i18n>=1.3.0,<2.0.0",
    "fluent-runtime>=0.4.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.9.0",
    "tzdata>=2024.1",
]
